--- a/nomadcoder_vanila.js/css/style.css
+++ b/nomadcoder_vanila.js/css/style.css
@@ -1,3 +1,83 @@
 .hidden {
     display: none;
 }
+
+.bgImg {
+    position: absolute;
+    top: 0;
+    left: 0;
+    width: 100%;
+    height: 100%;
+    z-index: -1;
+    animation: fadeIn 0.5s linear;
+}
+
+#login-form {
+    position: absolute;
+    top: 50%;
+    left: 50%;
+    transform: translate(-50%, -50%);
+}
+
+input.input-holder {
+    width: 300px;
+    height: 60px;
+    text-align: center;
+    border-radius: 20px;
+    font-size: large;
+    font-weight: bold;
+}
+
+#greeting {
+    top: 20%;
+    font-family: Cambria, Cochin, Georgia, Times, 'Times New Roman', serif;
+    text-align: center;
+}
+
+.todo-sect {
+    position: absolute;
+    top: 50%;
+    left: 50%;
+    transform: translate(-50%, -50%);
+    font-family: Cambria, Cochin, Georgia, Times, 'Times New Roman', serif;
+    align-content: center;
+}
+
+.todo-sect>#todo-form>input {
+    width: 300px;
+    height: 60px;
+    text-align: center;
+    border-radius: 20px;
+    font-size: large;
+    font-weight: bold;
+}
+
+#todo-list {
+    position: absolute;
+    font-family: Cambria, Cochin, Georgia, Times, 'Times New Roman', serif;
+    border: 1px dashed beige;
+    border-radius: 10px;
+    background-color: beige;
+    list-style-type: none;
+}
+
+ul>li>span {
+    padding: 0 5px 0 10px;
+}
+
+ul {
+    min-width: 265px;
+    min-height: 60px;
+}
+
+#delBtn {
+    padding-right: 35px;
+    float: right;
+    font-size: 5px;
+    background: none;
+    border: none;
+}
+
+.cancle {
+    text-decoration: line-through;
+}
