--- a/nomadcoder_vanila.js/css/style.css
+++ b/nomadcoder_vanila.js/css/style.css
@@ -22,6 +22,10 @@ html,body{
     padding:0;
 }
 
+.copy {
+    float: right;
+}
+
 #login-form {
     position: absolute;
     top: 50%;
@@ -38,23 +42,32 @@ input.input-holder {
     font-weight: bold;
 }
 
+
+.todo-sect {
+    position: absolute;
+    top: 50%;
+    left: 50%;
+    width: 600px;
+    transform: translate(-50%, -50%);
+    font-family: Cambria, Cochin, Georgia, Times, 'Times New Roman', serif;
+    display: flex;
+    justify-content: center;
+    flex-wrap: nowrap;
+    align-content: center;
+    align-items: center;
+    flex-direction: column;
+}
+
 #greeting {
     top: 30%;
     margin-bottom: 20px;
+    min-width: 300px;
     font-family: Cambria, Cochin, Georgia, Times, 'Times New Roman', serif;
     font-size: 80px;
     text-align: center;
     text-shadow: -1px 0 #000, 0 1px #000, 1px 0 #000, 0 -1px #000;
     color: white;
-}
-
-.todo-sect {
-    position: absolute;
-    top: 30%;
-    left: 50%;
-    transform: translate(-50%, -50%);
-    font-family: Cambria, Cochin, Georgia, Times, 'Times New Roman', serif;
-    align-content: center;
+    line-height: 50px;
 }
 
 .todo-sect>#todo-form>input {
@@ -64,15 +77,16 @@ input.input-holder {
     border-radius: 20px;
     font-size: large;
     font-weight: bold;
+    align-items: center;
 }
 
 #todo-list {
-    position: absolute;
     font-family: Cambria, Cochin, Georgia, Times, 'Times New Roman', serif;
     border: 1px dashed beige;
     border-radius: 10px;
     background-color: beige;
     list-style-type: none;
+    margin: 20px 25%;
 }
 
 ul>li>span {
@@ -84,7 +98,7 @@ ul {
     min-height: 60px;
 }
 
-#delBtn {
+.delBtn {
     padding-right: 40px;
     float: right;
     font-size: 5px;
@@ -95,6 +109,13 @@ ul {
 .cancle {
     text-decoration: line-through;
     color: #d3d3d3;
+}
+
+.logoutbtn {
+    border: 3px solid #dedede; 
+    background-color: rgba(0,0,0,0); 
+    color:  #dedede; 
+    padding: 5px;
 }
 
 
@@ -121,4 +142,34 @@ ul {
     font-style: italic;
     text-shadow: -1px 0 #dedede, 0 1px #dedede, 1px 0 #dedede, 0 -1px #dedede;
     color: grey;
+}
+
+#widget {
+    position: absolute;
+    top: 5%;
+    left: 10%;
+    min-width: 220px;
+    text-align: center;
+    padding-bottom: 20px;
+    background-image: url('../img/memo.png');
+    background-repeat : no-repeat;
+    background-size : cover;
+}
+
+h2#fulldate {
+    margin-top: 50px;
+    font-family: 'Gill Sans', 'Gill Sans MT', Calibri, 'Trebuchet MS', sans-serif;
+}
+h3#clock {
+    font-family: 'Gill Sans', 'Gill Sans MT', Calibri, 'Trebuchet MS', sans-serif;
+}
+
+.icon {
+    width: 30px;
+    height: 30px;
+}
+
+.weather {
+    font-family: 'Lucida Sans', 'Lucida Sans Regular', 'Lucida Grande', 'Lucida Sans Unicode', Geneva, Verdana, sans-serif
+    ;
 }
