--- a/nomadcoder_vanila.js/css/style.css
+++ b/nomadcoder_vanila.js/css/style.css
@@ -10,21 +10,23 @@
   height: 100%;
   z-index: -1;
   animation: fadeIn 0.5s linear;
+  background-attachment: scroll;
 }
 
 html {
   position: relative;
-  min-height: 100%;
 }
 
 html,
 body {
+  min-width: 100%;
+  min-height: 100%;
   margin: 0;
   padding: 0;
 }
 
 .copy {
-  float: right;
+  margin-left: auto;
 }
 
 #login-form {
@@ -47,7 +49,7 @@ input.input-holder {
   position: absolute;
   top: 50%;
   left: 50%;
-  width: 600px;
+  width: 100%;
   transform: translate(-50%, -50%);
   font-family: Cambria, Cochin, Georgia, Times, "Times New Roman", serif;
   display: flex;
@@ -143,7 +145,7 @@ ul {
 }
 
 #quote {
-  position: fixed;
+  position: absolute;
   bottom: 0;
   width: 100%;
   text-align: center;
