--- a/JS_practice/style.css
+++ b/JS_practice/style.css
@@ -107,3 +107,11 @@ body {
   transform: translate(-50%, -50%);
   content: "";
 }
+
+.non-click {
+  background-color: gold;
+}
+
+.click {
+  background-color: orchid;
+}
