22-04-06 flexible web context

--- a/web_study/flexibleWeb/css/reset.css
+++ b/web_study/flexibleWeb/css/reset.css
@@ -110,7 +110,7 @@ a {
   font-size: 100%;
   text-decoration: none;
   vertical-align: baseline;
-  color: #fff;
+  color: #000;
   background: transparent;
 }
 
