--- a/web_study/flexibleWeb/css/styles.css
+++ b/web_study/flexibleWeb/css/styles.css
@@ -99,6 +99,7 @@
   top: 0.625rem;
   right: 10px;
   right: 0.625rem;
+  text-indent: -9999px;
   background: url(../img/s_img/menu_toggle_btn.png) no-repeat;
   cursor: pointer;
 }
@@ -213,6 +214,102 @@ span.next_btn {
   font-weight: bold;
 }
 
+/* 인기 검색어 */
+.rankup_section {
+  order: 7;
+  padding: 40px 12.5%;
+  padding: 2.5rem 12.5%;
+  background: #219af7;
+  text-shadow: 0px 1px 1px #1974ba;
+}
+
+.rankup_list {
+  display: flex;
+  flex-wrap: wrap;
+  justify-content: space-between;
+}
+
+.rankup_list li {
+  width: 47.916666666666666667%;
+  margin-top: 15px;
+  margin-top: 0.938rem;
+  text-align: center;
+  text-transform: uppercase;
+  font-weight: bold;
+}
+
+.rankup_list li:first-child,
+.rankup_list li:nth-child(2) {
+  margin-top: 0;
+}
+
+.rankup_list li a {
+  display: block;
+  padding: 10px 0;
+  padding: 0.625rem 0;
+  border: 1px solid #fff;
+  border-radius: 5px;
+}
+
+/* 배너 */
+.banner_section {
+  order: 8;
+}
+
+.banner_box_01 {
+  background: #e6567a;
+}
+
+.banner_box_01 a {
+  display: block;
+  padding: 30px 0;
+  padding: 1.875rem 0;
+  text-align: center;
+}
+
+.banner_box_02 {
+  background: #c44968;
+}
+
+.banner_list {
+  display: flex;
+  justify-content: space-between;
+  padding: 30px 12.5%;
+  padding: 1.875rem 12.5%;
+}
+
+/* 소셜 네트워크 */
+.social_section {
+  order: 9;
+  padding: 24px 12.5%;
+  padding: 1.5rem 12.5%;
+  background: #fff;
+}
+
+.social_list {
+  display: flex;
+  justify-content: space-between;
+}
+
+/* 푸터 */
+.footer {
+  order: 10;
+  width: 100%;
+  background: #474747;
+}
+
+.footer p {
+  padding: 20px;
+  padding: 1.25rem;
+  font-size: 0.813em;
+  font-size: 0.813rem;
+  text-align: center;
+  text-transform: uppercase;
+  font-weight: bold;
+  color: #fff;
+  text-shadow: 0px 1px 1px #191919;
+}
+
 /* 태블릿용 */
 @media all and (min-width: 768px) {
   /* 기본 */
@@ -257,6 +354,7 @@ span.next_btn {
   .menu_toggle_btn {
     top: 50%;
     right: 30px;
+    right: 1.875rem;
     z-index: 20;
     margin-top: -15px;
     margin-top: -0.938rem;
@@ -308,7 +406,80 @@ span.next_btn {
     margin-left: 5.982905982905982905982905982906%;
     margin-top: 0;
   }
+  /* 인기 검색어 */
+  .rankup_section {
+    order: 4;
+    width: 40.104166666667%;
+    padding-left: 5.208333333333%;
+    padding-right: 5.208333333333%;
+  }
+
+  /* 배너 */
+  .banner_section {
+    display: flex;
+    order: 9;
+    flex-direction: column;
+    width: 28.64583333333333333%;
+  }
+
+  .banner_section div {
+    flex: 1 1 0;
+  }
+
+  .banner_box_01 {
+    display: flex;
+    justify-content: center;
+    align-items: center;
+  }
+
+  .banner_box_01 a {
+    display: inline;
+    padding: 0;
+  }
+
+  .banner_box_02 {
+    display: flex;
+    justify-content: center;
+    align-items: center;
+  }
+
+  .banner_list {
+    justify-content: flex-start;
+    padding: 0;
+  }
+
+  .banner_list li:nth-child(2) {
+    margin: 0 14px;
+    margin: 0 0.875rem;
+  }
+
+  /* 소셜 네트워크 */
+  .social_section {
+    display: flex;
+    order: 7;
+    justify-content: center;
+    align-items: center;
+    width: 16.66666666667%;
+    padding: 0;
+  }
+
+  .social_list {
+    flex-direction: column;
+    justify-content: flex-start;
+  }
+
+  .social_list li:nth-child(2) {
+    margin: 24px 0;
+    margin: 1.5rem 0;
+  }
+
+  /* 푸터 */
+  .footer p {
+    padding: 40px 0;
+    padding: 2.5rem 0;
+  }
 }
+
 /* PC용 */
 @media all and (min-width: 960px) {
   /* 기본 */
@@ -417,5 +588,69 @@ span.next_btn {
     margin-top: 30px;
     margin-top: 1.875rem;
     margin-left: 0;
+  }
+
+  /* 인기 검색어 */
+  .rankup_section {
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
+    align-items: center;
+    width: 22.916666666667%;
+    padding: 0;
+  }
+
+  .rankup_list {
+    display: block;
+  }
+
+  .rankup_list li {
+    width: auto;
+    text-align: left;
+    counter-increment: rankup-counter;
+  }
+
+  .rankup_list li:nth-child(2) {
+    margin-top: 15px;
+    margin-top: 0.938rem;
+  }
+
+  .rankup_list li::before {
+    padding-right: 6px;
+    padding-right: 0.375rem;
+    text-transform: uppercase;
+    font-weight: bold;
+    color: #fff;
+    text-shadow: 0px 1px 1px #428e9e;
+    content: counter(rankup-counter) ".";
+  }
+
+  .rankup_list li a {
+    display: inline;
+    padding: 0;
+    border: 0;
+  }
+
+  /* 배너 */
+  .banner_section {
+    order: 7;
+    width: 22.91666666666666667%;
+  }
+
+  /* 소셜 네트워크 */
+  .social_section {
+    order: 8;
+    width: 17.0833333333%;
+  }
+
+  /* 푸터 */
+
+  .footer {
+    order: 9;
+  }
+
+  .footer p {
+    padding-left: 3.125%;
+    text-align: left;
   }
 }
