--- a/web_study/practiceWeb/practice.css
+++ b/web_study/practiceWeb/practice.css
@@ -1,22 +1,15 @@
-#wrap {
-  position: relative;
+.container {
+  width: 60%;
+  display: flex;
+  flex-flow: row nowrap;
+  overflow: hidden;
+  margin: 0 auto;
 }
 
-#wrap div:nth-child(even) {
-  height: 120px;
-  background: darkgoldenrod;
+.container div a img:nth-child(n) {
+  width: 60vw;
 }
 
-#wrap div:nth-child(odd) {
-  height: 150px;
-  background: darkgreen;
-}
-
-.item1,
-.item2,
-.item3,
-.item4,
-.item5 {
-  position: absolute;
-  width: 600px;
+.container div {
+  transition: transform 0.5s;
 }
