--- a/web_study/practiceWeb/practice.css
+++ b/web_study/practiceWeb/practice.css
@@ -1,15 +1,25 @@
-.container {
-  width: 60%;
+body {
+  margin: 0;
+}
+
+.slider {
+  width: 100%;
+  position: relative;
   display: flex;
-  flex-flow: row nowrap;
-  overflow: hidden;
+  justify-content: center;
+  align-items: center;
+}
+
+.slider__item {
+  position: absolute;
+  top: 0;
   margin: 0 auto;
+  z-index: 0;
+  opacity: 0;
+  transition: opacity 0.5s ease-in-out;
 }
 
-.container div a img:nth-child(n) {
-  width: 60vw;
-}
-
-.container div {
-  transition: transform 0.5s;
+.showing {
+  z-index: 1;
+  opacity: 1;
 }
