--- a/web_study/flexibleWeb/css/subpage.css
+++ b/web_study/flexibleWeb/css/subpage.css
@@ -24,6 +24,7 @@
 }
 
 /* 콘텐츠 */
+/* 소개 */
 .content_section {
   order: 4;
   padding: 20px;
@@ -118,6 +119,30 @@
   color: #444;
 }
 
+/* 갤러리 */
+.gallery_list img {
+  width: 100%;
+  max-width: 100%;
+  border-radius: 5px;
+  transition: all 0.4s;
+  -webkit-filter: grayscale(1);
+  filter: grayscale(1);
+}
+
+.gallery_list img:hover {
+  -webkit-filter: grayscale(0);
+  filter: grayscale(0);
+}
+
+.gallery_list li {
+  margin-top: 20px;
+  margin-top: 1.25rem;
+}
+
+.gallery_list li:first-child {
+  margin-top: 0;
+}
+
 /* 푸터 */
 .footer {
   order: 5;
@@ -130,6 +155,7 @@
   }
 
   /* 콘텐츠 */
+  /* 소개 */
   .content_section {
     padding: 40px;
     padding: 2.5rem;
@@ -149,6 +175,7 @@
   }
 
   /* 콘텐츠 */
+  /* 소개 */
   .content_section {
     order: 3;
     padding: 60px;
